debugger options for transparent and states

--- a/package.json
+++ b/package.json
@@ -21,6 +21,12 @@
   },
   "homepage": "",
   "dependencies": {
+    "@alpinejs/anchor": "^3.13.5",
+    "@alpinejs/collapse": "^3.13.5",
+    "@alpinejs/focus": "^3.13.5",
+    "@alpinejs/intersect": "^3.13.5",
+    "@alpinejs/mask": "^3.13.5",
+    "@alpinejs/persist": "^3.13.5",
     "@swup/forms-plugin": "^3.4.2",
     "@swup/fragment-plugin": "^1.0.0",
     "@swup/head-plugin": "^2.2.0",
@@ -32,6 +38,8 @@
     "alpinejs": "^3.12.2",
     "autoprefixer": "^10.4.14",
     "htmx.org": "^1.9.10",
+    "install": "^0.13.0",
+    "npm": "^10.4.0",
     "postcss": "^8.4.24",
     "postcss-import": "^15.1.0",
     "postcss-import-ext-glob": "^2.1.1",
