--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "watch": "mix watch",
     "watch-poll": "mix watch -- --watch-options-poll=1000",
     "hot": "mix watch --hot",
-    "production": "mix --production"
+    "production": "mix --production",
+    "format": "prettier --write \"**/*.{html,css,json, js}\""
   },
   "repository": {
     "type": "git",
@@ -26,31 +27,29 @@
     "@alpinejs/focus": "^3.13.5",
     "@alpinejs/intersect": "^3.13.5",
     "@alpinejs/mask": "^3.13.5",
+    "@alpinejs/morph": "^3.13.5",
     "@alpinejs/persist": "^3.13.5",
-    "@swup/forms-plugin": "^3.4.2",
-    "@swup/fragment-plugin": "^1.0.0",
-    "@swup/head-plugin": "^2.2.0",
-    "@swup/js-plugin": "^3.1.1",
-    "@swup/parallel-plugin": "^0.4.0",
-    "@swup/preload-plugin": "^3.2.10",
-    "@swup/progress-plugin": "^3.1.2",
     "@tailwindcss/typography": "^0.5.9",
+    "htmx.org": "^1.9.10",
     "alpinejs": "^3.12.2",
     "autoprefixer": "^10.4.14",
-    "htmx.org": "^1.9.10",
     "install": "^0.13.0",
     "npm": "^10.4.0",
     "postcss": "^8.4.24",
     "postcss-import": "^15.1.0",
     "postcss-import-ext-glob": "^2.1.1",
-    "swup": "^4.6.0",
     "tailwindcss": "^3.3.2"
   },
   "devDependencies": {
+    "@tailwindcss/forms": "^0.5.7",
+    "@tailwindcss/typography": "^0.5.9",
     "browser-sync": "^2.29.3",
     "browser-sync-webpack-plugin": "^2.3.0",
     "cross-env": "^7.0.3",
     "laravel-mix": "^6.0.49",
+    "prettier": "^3.2.5",
+    "tailwind-scrollbar-hide": "^1.1.7",
+    "tailwind-scrollbar-utilities": "^0.2.0",
     "vue-template-compiler": "^2.7.14"
   }
 }
