--- a/package.json
+++ b/package.json
@@ -30,9 +30,9 @@
     "@alpinejs/morph": "^3.13.5",
     "@alpinejs/persist": "^3.13.5",
     "@tailwindcss/typography": "^0.5.9",
-    "htmx.org": "^1.9.10",
     "alpinejs": "^3.12.2",
     "autoprefixer": "^10.4.14",
+    "htmx.org": "^1.9.10",
     "install": "^0.13.0",
     "npm": "^10.4.0",
     "postcss": "^8.4.24",
@@ -45,9 +45,13 @@
     "@tailwindcss/typography": "^0.5.9",
     "browser-sync": "^2.29.3",
     "browser-sync-webpack-plugin": "^2.3.0",
+    "chalk": "^5.3.0",
     "cross-env": "^7.0.3",
+    "fs-extra": "^11.2.0",
+    "inquirer": "^9.2.15",
     "laravel-mix": "^6.0.49",
     "prettier": "^3.2.5",
+    "readline": "^1.3.0",
     "tailwind-scrollbar-hide": "^1.1.7",
     "tailwind-scrollbar-utilities": "^0.2.0",
     "vue-template-compiler": "^2.7.14"
